--- a/tools/missons-cli/Cargo.toml
+++ b/tools/missons-cli/Cargo.toml
@@ -11,6 +11,8 @@ tokio = { version = "1", features = ["full"] }
 anyhow = "1.0"
 hyper = { version = "0.14", features = ["full"] }
 hyper-tls = "0.5.0"
+tempdir="0.3.7"
+zip="0.5"
 
 # serde_json = "1.0"
 # serde = "1.0"
